[package]
name = "openvpn-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
structopt = { version = "0.3" }
tokio = { version = "1.30", features = ["rt", "macros", "time", "process", "net"] }
chrono = { version = "0.4" }
simplelog = { version = "0.12" }
log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
actix-web = { version = "4.3", default-features = false, features = ["macros", "compress-gzip"] }
actix-web-httpauth = { version = "0.8" }

[profile.release]
strip = true
